<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tipact"
    tools:context=".tipsact">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/whattodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"
                android:text="@string/whtodo"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/followedbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onFollowClick"
                android:text="@string/follow"
                android:textColor="#1AA3BC"
                android:textStyle="bold"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/roadragebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onRageClick"
                android:text="@string/roadrage"
                android:textColor="#1AA3BC"
                android:textStyle="bold"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/druggedbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onDrugClick"
                android:text="@string/drugged"
                android:textColor="#1AA3BC"
                android:textStyle="bold"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/stalkbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onStalkClick"
                android:text="@string/stalk"
                android:textColor="#1AA3BC"
                android:textStyle="bold"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/injuredbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onInjuryClick"
                android:text="@string/injured"
                android:textColor="#1AA3BC"
                android:textStyle="bold"
                app:backgroundTint="#FFFFFF" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-184dp">

        <Button
            android:id="@+id/suggestionsbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/bottom_navigation"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:onClick="onSuggestionClick"
            android:text="@string/suggest"
            android:textColor="#1AA3BC"
            app:backgroundTint="#FFFFFF"
            app:layout_constraintVertical_bias="0.85" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#FF46B2E3"
            app:itemBackground="@color/bnv_tab_item_foreground"
            app:itemIconTint="@android:color/white"
            app:itemTextColor="@android:color/white"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/bottom_nav_menu" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>