<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainactivity"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/changecntctbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onContactClick"
        android:text="@string/changecntct"
        android:textColor="#03A9F4"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emergencybutton"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/emergencybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onEmergencyClick"
        android:text="@string/emergency"
        android:textColor="#03A9F4"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textbutton"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/textbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onTextClick"
        android:text="@string/text"
        android:textColor="#03A9F4"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/callbutton"
        app:layout_constraintVertical_bias="0.07999998" />

    <Button
        android:id="@+id/callbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCallClick"
        android:text="@string/call"
        android:textColor="#03A9F4"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#FF46B2E3"
            app:itemBackground="@color/bnv_tab_item_foreground"
            app:itemIconTint="@android:color/white"
            app:itemTextColor="@android:color/white"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/bottom_nav_menu" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>